# federated-learning

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  FLOW.md  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
.dvc/: config
client-notebooks/: SITE_b.ipynb  SITE_c.ipynb
configs/: README.md
configs/datasets/: manifest_example.csv  ppe_detection_exp011_manifest.csv  ppe_manifest_template.csv  ppe_real_exp006_manifest.csv  ppe_real_smoke_manifest.csv
configs/experiments/: ppe_oom_safe_smoke.yaml
data/: .gitignore  README.md  ppe.dvc
demo/: pyproject.toml
docs/: Federated Learning.md
docs/engineering/: README.md
docs/journal/: 2026-06-12_EXP-001_synthetic-flower-pytorch-baseline.md  2026-06-18_EXP-002_oom-safe-single-machine-smoke.md  2026-06-18_EXP-003_ppe-embedding-dry-run-baseline.md  2026-06-22_EXP-004_ppe-real-resnet18-embedding-smoke.md  2026-06-22_EXP-005_ppe-real-resnet18-stability-baseline.md  2026-06-25_EXP-006_ppe-real-resnet18-scaled-baseline.md  2026-06-25_EXP-007_ppe-real-resnet18-train-longer-baseline.md  2026-06-25_EXP-008_ppe-embedding-weight-decay-regularization.md  2026-06-25_EXP-009_ppe-embedding-l2-normalize.md  2026-06-25_EXP-010_ppe-embedding-mlp-head-capacity.md  2026-06-25_detection-pivot-progress.md  README.md  template.md
docs/md/: PLAN.md  REPORT.md  kehoachthuviec.md  problem.md
docs/pdfs/: PL 12. Kế hoạch học việc - Lâm.docx
experiments/: README.md
experiments/centralized/: .gitkeep
notebooks/: README.md  SITE_b.ipynb  SITE_c.ipynb
outputs/: README.md
outputs/EXP-001/: centralized_metrics.json  federated_metrics.json  local_only_metrics.json  summary.json
outputs/EXP-002/: centralized_metrics.json  federated_metrics.json  summary.json  (+1 more)
scripts/: README.md  capture_flower_logs.py  evaluate_final_detection_head.py  export_detection_subset.py  generate_detection_manifest.py  generate_ppe_manifest.py  precompute_embeddings.py  run_demo.py  run_detection_inference.py  run_detection_sim.py  run_embedding_demo.py
src/: README.md  __init__.py
tests/: README.md  test_capture_flower_logs.py  test_config.py  test_data_partition.py  test_deployment_artifacts.py  test_detection_baselines.py  test_detection_config.py  test_detection_data.py  test_detection_dataset.py  test_detection_federated.py  test_detection_flower_apps.py  test_detection_inference.py  test_detection_manifest.py  test_detection_model.py  test_detection_task.py  test_detection_trainer.py  test_edge_profile.py  test_embedding_classification_task.py  test_embedding_pipeline.py  test_env.py  test_export_detection_subset.py  test_federated_task.py  test_final_head_eval.py  test_generate_ppe_manifest.py  test_head_model.py  test_metrics.py  test_real_data.py  test_task_reusability.py
(+106 files in other folders)
