[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fl-camera-research"
version = "0.1.0"
description = "Federated Learning camera research baseline demos"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "flwr[simulation]>=1.30.0",
    "numpy>=2.0.0",
    "Pillow>=10.0.0",
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "pyyaml>=6.0.0",
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.flwr.app]
publisher = "vnpt-ai"
fab-format-version = 1
flwr-version-target = "1.30.0"

[tool.flwr.app.components]
serverapp = "src.fl.server_app:app"
clientapp = "src.fl.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
profile = "default"
num-clients = 5
num-classes = 3
input-dim = 16
embedding-dim = 8
samples-per-client = 120
partition = "non_iid"
dirichlet-alpha = 0.3
batch-size = 16
local-epochs = 2
centralized-epochs = 4
lr = 0.05
seed = 2026
num-workers = 0
client-num-cpus = 1.0
quick = false
output-dir = "outputs/EXP-001"
