[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fl-camera-research"
version = "0.1.0"
description = "Federated Learning camera research baseline demos"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "flwr[simulation]>=1.30.0",
    "numpy>=2.0.0",
    "Pillow>=10.0.0",
    "pycocotools>=2.0.11",
    "torch>=2.3.0",
    "torchmetrics[detection]>=1.9.0",
    "torchvision>=0.18.0",
    "pyyaml>=6.0.0",
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.flwr.app]
publisher = "vnpt-ai"
fab-format-version = 1
flwr-version-target = "1.30.0"

[tool.flwr.app.components]
serverapp = "src.fl.detection_serverapp:app"
clientapp = "src.fl.detection_clientapp:app"

[tool.flwr.app.config]
exp-id = "EXP-011"
output-dir = "outputs/EXP-011"
manifest-path = "configs/datasets/ppe_detection_exp011_manifest.csv"
root-dir = "data/ppe"
num-clients = 3
num-classes = 9
image-size = 512
batch-size = 2
local-epochs = 1
centralized-epochs = 1
num-rounds = 1
lr = 0.005
momentum = 0.9
weight-decay = 0.0005
score-threshold = 0.05
device = "auto"
pretrained = true
num-workers = 0
seed = 2026

[tool.flwr.federations]
default = "local-sim"

[tool.flwr.federations.local-sim]
options.num-supernodes = 3
options.backend.client-resources.num-cpus = 1
options.backend.client-resources.num-gpus = 0

[tool.flwr.federations.deploy]
address = "127.0.0.1:9093"
insecure = true
